[tool.poetry]
name = "iobench"
version = "0.1.0"
description = "Distributed IO benchmark that supports s3 (MinIO) and POSIX"
authors = ["Michael Mao <michael.mao99@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
