[tool.poetry]
name = "iobench"
version = "0.1.0"
description = "Distributed IO benchmark that supports s3 (MinIO) and POSIX"
authors = ["Michael Mao <michael.mao99@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/michaelmyc/iobench"

[tool.poetry.dependencies]
python = "^3.11"
tomli-w = "^1.0.0"
tqdm = "^4.66.2"
minio = "^7.2.4"
s3fs = "^2024.2.0"
paramiko = "^3.4.0"
grpcio = "^1.60.1"
numpy = "^1.26.4"
isodate = "^0.6.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.60.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
iobench = "iobench.console:run"